--- a/templates/project/transaction_list.html
+++ b/templates/project/transaction_list.html
@@ -52,6 +52,7 @@
         font-weight: bold;
         font-size: 1.2rem;
     }
+
     ul {
         list-style-type: none;
         margin: 0;
@@ -80,10 +81,11 @@
 </style>
 
 <body>
-<ul>
-  <li><a class="active" href="/transaction">Home</a></li>
-  <li><a href="/history">History</a></li>
-</ul>
+    <ul>
+        <li><a href="/transaction">Home</a></li>
+        <li><a href="/history">History</a></li>
+        <li><a href="/analytics">Analytics</a></li>
+    </ul>
 
     <p class="text-center"> </p>
 
@@ -100,10 +102,11 @@
                         <option value ="Kazkom">Kazkom</option>
             </select>
             <select name ="company" class="custom-select" id="inputGroupSelect04" style="width:200px">
-                        <option value ="Kaspi">Chocotravel/Aviata</option>
-                        <option value ="Processing">Chocolife</option>
-                        <option value ="Tourism">Rahmet</option>
-                        <option value ="Kazkom">Chocofood</option>
+                        <option value ="Chocotravel">Chocotravel/Aviata</option>
+                        <option value ="Chocolife">Chocolife</option>
+                        <option value ="Rahmet">Rahmet</option>
+                        <option value ="Chocofood">Chocofood</option>
+                        <option value ="iDoctor">iDoctor</option>
             </select>
             <select name ="direction" class="custom-select" id="inputGroupSelect04" style="width:200px">
                         <option value="ChocoToPayment">Choco -> Payment</option>
