--- a/templates/project/Analytics.html
+++ b/templates/project/Analytics.html
@@ -42,6 +42,12 @@
         <li><a href="/transaction">Home</a></li>
         <li><a href="/history">History</a></li>
         <li><a href="/analytics">Analytics</a></li>
+        {% if request.session.isAuth  %}
+            <li><a href = "/auth/logout/">Выйти ({{ request.session.user }})</a></li>
+        {% else %}
+            <li><a href = "/auth/login/">Войти</a></li>
+        {% endif %}
+    </ul>
     </ul>
 
 <h1 class="text-center my-3"> Analytics page </h1>
