--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -21,7 +21,7 @@
         <div class="form-group">
             {% csrf_token %}
             <label for="username">Имя пользователя</label>
-            <input type="email" class="form-control" name="username" id="username">
+            <input type="username" class="form-control" name="username" id="username">
         </div>
         <div class="form-group">
             <label for="password">Пароль</label>
