'user registration and login, updated db'

--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -17,6 +17,8 @@
 
 {% block login %}
 
+        <h4> {{ message }}</h4>
+
         <form action="/auth/login/" method="post">
         <div class="form-group">
             {% csrf_token %}
