--- a/templates/project/transaction_list.html
+++ b/templates/project/transaction_list.html
@@ -82,7 +82,7 @@
 
 <body>
     <ul>
-        <li><a href="/transaction">Home</a></li>
+        <li><a href="/">Transactions</a></li>
         <li><a href="/history">History</a></li>
         <li><a href="/analytics">Analytics</a></li>
         {% if request.session.isAuth  %}
