--- a/templates/project/Analytics.html
+++ b/templates/project/Analytics.html
@@ -39,7 +39,7 @@
 </style>
 <body>
     <ul>
-        <li><a href="/transaction">Home</a></li>
+        <li><a href="/">Transactions</a></li>
         <li><a href="/history">History</a></li>
         <li><a href="/analytics">Analytics</a></li>
         {% if request.session.isAuth  %}
