--- a/templates/project/History.html
+++ b/templates/project/History.html
@@ -80,7 +80,7 @@
 </style>
 <body>
     <ul>
-        <li><a href="/transaction">Home</a></li>
+        <li><a href="/">Transactions</a></li>
         <li><a href="/history">History</a></li>
         <li><a href="/analytics">Analytics</a></li>
         {% if request.session.isAuth  %}
@@ -104,6 +104,13 @@
             <br>
             <input type="text" class = "reference" placeholder="Find by reference" name="reference">
             <button type="submit" class="btn btn-success ml-3 btn-2" name = "find" value="reference">Find</button>
+
+            <select name ="name" class="custom-select" id="inputGroupSelect04" style="width:200px">
+                        <option value ="Kaspi">Kaspi</option>
+                        <option value ="Processing">Processing</option>
+                        <option value ="Tourism">Tourism</option>
+                        <option value ="Kazkom">Kazkom</option>
+            </select>
 
             <select name ="company" class="custom-select" id="inputGroupSelect04" style="width:200px">
                         <option value ="Chocotravel">Chocotravel/Aviata</option>
