--- a/templates/project/History.html
+++ b/templates/project/History.html
@@ -93,32 +93,39 @@
 <h1 class="text-center my-3"> History of Updates  </h1>
 
     <div class="select2-container" style="padding-top:15px;">
-        <form method='post' class="d-flex justify-content-center">
+        <form method='post' class="d-flex justify-content-center align-items-center flex-column">
                         {% csrf_token %}
-            <input class="form-control input-cal" type="date" id="example-date-input" name="start_date" style= 'width:200px'>
-            <input class="form-control input-cal" type="date" id="example-date-input" name ="end_date" style= 'width:200px'>
-            <button type="submit" class="btn btn-success ml-3 btn-3" name = "find" value="range">Find by range </button>
+            <div class="d-flex justify-content-center">
+                <input class="form-control input-cal" type="date" id="example-date-input" name="start_date" style= 'width:200px'>
+                <input class="form-control input-cal ml-1" type="date" id="example-date-input" name ="end_date" style= 'width:200px'>
+                <button type="submit" class="btn btn-success ml-3 btn-3" name = "find" value="range">Find by range </button>
+            </div>
+            <div class="d-flex justify-content-between mt-4 ">
+                <div class="">
+                    <input type="text" class = "id" placeholder="Find by ID" name="id">
+                    <button type="submit" class="btn btn-success btn-1" name = "find" value="id">Find</button>
+                </div>
+                <div class="">
+                    <input type="text" class = "reference ml-3" placeholder="Find by reference" name="reference">
+                    <button type="submit" class="btn btn-success btn-2" name = "find" value="reference">Find</button>
+                </div>
+            </div>
+            <div class="d-flex justify-content-between mt-4">
+                <select name ="name" class="custom-select" id="inputGroupSelect04" style="width:200px">
+                            <option value ="Kaspi">Kaspi</option>
+                            <option value ="Processing">Processing</option>
+                            <option value ="Tourism">Tourism</option>
+                            <option value ="Kazkom">Kazkom</option>
+                </select>
 
-            <input type="text" class = "id" placeholder="Find by ID" name="id">
-            <button type="submit" class="btn btn-success ml-3 btn-1" name = "find" value="id">Find</button>
-            <br>
-            <input type="text" class = "reference" placeholder="Find by reference" name="reference">
-            <button type="submit" class="btn btn-success ml-3 btn-2" name = "find" value="reference">Find</button>
-
-            <select name ="name" class="custom-select" id="inputGroupSelect04" style="width:200px">
-                        <option value ="Kaspi">Kaspi</option>
-                        <option value ="Processing">Processing</option>
-                        <option value ="Tourism">Tourism</option>
-                        <option value ="Kazkom">Kazkom</option>
-            </select>
-
-            <select name ="company" class="custom-select" id="inputGroupSelect04" style="width:200px">
-                        <option value ="Chocotravel">Chocotravel/Aviata</option>
-                        <option value ="Chocolife">Chocolife</option>
-                        <option value ="Rahmet">Rahmet</option>
-                        <option value ="Chocofood">Chocofood</option>
-                        <option value ="iDoctor">iDoctor</option>
-            </select>
+                <select name ="company" class="custom-select ml-3" id="inputGroupSelect04" style="width:200px">
+                            <option value ="Chocotravel">Chocotravel/Aviata</option>
+                            <option value ="Chocolife">Chocolife</option>
+                            <option value ="Rahmet">Rahmet</option>
+                            <option value ="Chocofood">Chocofood</option>
+                            <option value ="iDoctor">iDoctor</option>
+                </select>
+            </div>
         </form>
     </div>
 
@@ -151,6 +158,10 @@
                             <td> {{ i.bank }}</td>
                         </tr>
                         {%  endfor %}
+
+                {% endif %}
+                {% if not found %}
+                    <h5 style="text-align: center"> There is no information about it</h5>
 
                 {% endif %}
                 </table>
