--- a/templates/project/History.html
+++ b/templates/project/History.html
@@ -83,6 +83,8 @@
         <li><a href="/">Transactions</a></li>
         <li><a href="/history">History</a></li>
         <li><a href="/analytics">Analytics</a></li>
+        <li><a href="/tasks">Tasks</a> </li>
+
         {% if request.session.isAuth  %}
             <li><a href = "/auth/logout/">Выйти ({{ request.session.user }})</a></li>
         {% else %}
