--- a/templates/project/Tasks.html
+++ b/templates/project/Tasks.html
@@ -2,13 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Analytics</title>
+    <title>Title</title>
 </head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="jquery-3.3.1.min.js"></script>
 <style>
     body, html {
         font-size: 12px;
+    }
+    .selected {
+    background-color: brown;
+    color: #FFF;
+    }
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+        margin: 1rem 0;
+    }
+    td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+    }
+
+    h1{
+        font-size: 2rem;
+    }
+    h5 {
+        font-weight: bold;
+    }
+
+    .notequal-thead {
+        background-color: #ff7e22;
+
+    }
+    .notfound-thead {
+        background-color: red;
+
+    }
+    .equal-thead {
+        background-color: seagreen;
+
+    }
+    table th {
+        color: #fff;
+    }
+    .notequal-thead,.notequal,.equal {
+        margin:1rem 0;
+    }
+    table .total td {
+        font-weight: bold;
+        font-size: 1.2rem;
     }
 
     ul {
@@ -37,32 +83,19 @@
         color: white;
     }
 </style>
+
 <body>
     <ul>
         <li><a href="/">Transactions</a></li>
         <li><a href="/history">History</a></li>
         <li><a href="/analytics">Analytics</a></li>
-        <li><a href="/tasks">Tasks</a></li>
-
+        <li><a href="/tasks">Tasks</a> </li>
         {% if request.session.isAuth  %}
             <li><a href = "/auth/logout/">Выйти ({{ request.session.user }})</a></li>
         {% else %}
             <li><a href = "/auth/login/">Войти</a></li>
         {% endif %}
     </ul>
-    </ul>
-
-    <h1 class="text-center my-3"> Analytics page </h1>
-    <div class = "d-flex justify-content-center">
-        <button class = "btn btn-outline-info center-block">Ежедневно</button>
-        <button class = "btn btn-outline-info center-block">Еженедельно</button>
-        <button class = "btn btn-outline-info center-block">Ежемесячно</button>
-    </div>
-    {% if graph %}
-    <div class="d-flex justify-content-center" style="">
-    {{ graph|safe }}
-    </div>;
-    {% endif %}
 
 
 
