'start of adding tasks'

--- a/templates/project/transaction_list.html
+++ b/templates/project/transaction_list.html
@@ -601,7 +601,7 @@
             $("#table tr.selected").each(function(){
                 selected.push($('td', this).html());
             });
-            var str = ""
+            var str = "";
             for(var i = 0; i<selected.length; i++){
                 str += selected[i] + " ";
             }
