--- a/templates/project/History.html
+++ b/templates/project/History.html
@@ -138,7 +138,7 @@
                     <table>
                         <thead class="notequal-thead">
                             <th> ID </th>
-                            <th> DATE </th>
+                            <th> UPDATED DATE </th>
                             <th> TIME </th>
                             <th> UPDATED TIME </th>
                             <th> TRANSFER </th>
